[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pumpkin_py"
author = ""
author-email = ""
home-page = "https://github.com/kshefchek/pumpkin-py"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: POSIX :: Linux",
]
requires = [
    "numpy >= 1.19.0",
    "rdflib >= 5.0.0",
    "pyroaring >= 0.3.2",
    "bidict >= 0.21.2",
]
description-file = "README.md"
requires-python = ">=3.8"

[tool.flit.metadata.urls]
Documentation = "https://github.com/kshefchek/pumpkin-py"

[tool.flit.metadata.requires-extra]
test = [
    "pytest >=6.0.0",
]
dev = [
    "autoflake >=1.3.1,<2.0.0",
    "flake8 >=3.8.3,<4.0.0",
    "black ==20.8b1",
    "isort >=5.0.6,<6.0.0",
]

[tool.black]
line_length = 100
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
